--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+body { background: #fdf7f0 !important; }
 /* Fonte geral */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');
 
