--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body { background: #fdf7f0 !important; }
 /* Fonte geral */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');
+url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');
 
 body {
   font-family: 'Montserrat', sans-serif;
